--- a/ProductStoreWebAPI/ProductStoreWebAPI/ProductStoreWebAPI.csproj
+++ b/ProductStoreWebAPI/ProductStoreWebAPI/ProductStoreWebAPI.csproj
@@ -34,7 +34,8 @@
     <OutputPath>bin\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <WarningLevel>1</WarningLevel>
+    <DocumentationFile>bin\ProductStoreWebAPI.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
